--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   
   <script type="text/javascript">
     var base_url = "<%= root_url %>";
+    var user_id = "<%= current_user.nil? ? 0 : current_user.id %>";
+    var csrf_token = "<%= form_authenticity_token %>";
   </script>
   
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
